Add create and delete cycle task group dropdown items

--- a/src/ggrc-client/styles/components/tree/_tree-view.scss
+++ b/src/ggrc-client/styles/components/tree/_tree-view.scss
@@ -44,7 +44,8 @@ tree-widget-container {
     display: flex;
     justify-content: flex-end;
 
-    .saved-search-permalink {
+    .saved-search-permalink,
+    .create-task-group {
       a {
         text-decoration: none;
         .fa-link {
